configuración de los parametros de conexión a la base de datos

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+# conexion base de datos
+spring.datasource.url=jdbc:mysql://localhost/control_empleados
+spring.datasource.username=root
+spring.datasource.password=Root
 
+# JPA
+spring.jpa.properties.hibernate.diale=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
