configuración para la base de datos

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
-# conexion base de datos
-spring.datasource.url=jdbc:mysql://localhost/control_empleados
+# base de datos
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/control_empleados
 spring.datasource.username=root
 spring.datasource.password=Root
 
 # JPA
-spring.jpa.properties.hibernate.diale=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
